--- a/charts/workflow-service/dev/dev-values.yaml
+++ b/charts/workflow-service/dev/dev-values.yaml
@@ -3,20 +3,12 @@ replicaCount: 2
 image:
   repository: 123456789012.dkr.ecr.us-east-1.amazonaws.com/myservice
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
-  type: ClusterIP
-  port: 8080
+  type: LoadBalancer
+  port: 80          # Exposed service port (external)
+  targetPort: 8080  # Container port that service forwards to
 
-resources:
-  limits:
-    cpu: 500m
-    memory: 512Mi
-  requests:
-    cpu: 250m
-    memory: 256Mi
-
-env:
-  - name: ENVIRONMENT
-    value: dev
+container:
+  port: 8080        # The port app listens on inside container
