--- a/charts/workflow-service/templates/deployment.yaml
+++ b/charts/workflow-service/templates/deployment.yaml
@@ -19,16 +19,4 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.service.port }}
-          env:
-{{- range .Values.env }}
-            - name: {{ .name }}
-              value: {{ .value }}
-{{- end }}
-          resources:
-            limits:
-              cpu: {{ .Values.resources.limits.cpu }}
-              memory: {{ .Values.resources.limits.memory }}
-            requests:
-              cpu: {{ .Values.resources.requests.cpu }}
-              memory: {{ .Values.resources.requests.memory }}
+            - containerPort: {{ .Values.container.port }}
