--- a/charts/workflow-service/templates/service.yaml
+++ b/charts/workflow-service/templates/service.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "myservice.fullname" . }}
+  labels:
+    app: {{ include "myservice.name" . }}
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
   selector:
     app: {{ include "myservice.name" . }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
