--- a/charts/workflow-service/chart.yaml
+++ b/charts/workflow-service/chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: my-java-app
+name: myservice
 description: A Helm chart for a Java microservice
 type: application
 version: 0.1.0
