--- a/charts/workflow-service/dev/dev-values.yaml
+++ b/charts/workflow-service/dev/dev-values.yaml
@@ -13,6 +13,10 @@ image:
 
 container:
   port: 8081
+service:
+  type: LoadBalancer     
+  port: 80             
+  targetPort: 8081     
 
 prometheus:
   scrape: "true"
