--- a/charts/workflow-service/templates/service.yaml
+++ b/charts/workflow-service/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "myservice.fullname" . }}
+  name: {{ .Values.myservice.fullname }}
   labels:
-    app: {{ include "myservice.name" . }}
+    app: {{ .Values.myservice.name }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ include "myservice.name" . }}
+    app: {{ .Values.myservice.name }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
