--- a/charts/workflow-service/dev/dev-values.yaml
+++ b/charts/workflow-service/dev/dev-values.yaml
@@ -15,7 +15,7 @@ container:
   port: 8081
   
 service:
-  fullname: my-app-dev   
+  fullname: dev-my-app   
   name: my-app           
   type: LoadBalancer     
   port: 80             
