--- a/charts/workflow-service/dev/dev-values.yaml
+++ b/charts/workflow-service/dev/dev-values.yaml
@@ -13,14 +13,6 @@ image:
 
 container:
   port: 8081
-  
-image:
-  repository: myrepo/myservice
-  tag: latest
-  pullPolicy: IfNotPresent
-
-container:
-  port: 8081
 
 service:
   name: my-app
@@ -28,17 +20,10 @@ service:
   type: LoadBalancer
   port: 80
   targetPort: 8081
-  prometheus:
-    enabled: true
-    scrape: "true"
-    port: "8081"
-    path: "/metrics"
-
-env:
-  javaOpts: "-Xms512m -Xmx1024m"
-  springProfile:
-    configMapName: myapp-config
-    key: activeProfile
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8081"
+    prometheus.io/path: "/metrics"
 
 env:
   javaOpts: "-Xms512m -Xmx1024m"
@@ -55,6 +40,5 @@ resources:
     memory: "1Gi"
 
 dnsPolicy: Default
-restartPolicy: Always
 
 imagePullSecrets: my-docker-secret
